--- a/client/assets/sass/shared/_variables.scss
+++ b/client/assets/sass/shared/_variables.scss
@@ -4,4 +4,6 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 // ic colors ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 $ic-darkgreen:                                                          #15444c;
+$ic-darkgreen-80:                                                       #446971;
 $ic-brightgreen:                                                        #bbcc33;
+$ic-brightgray:                                                         #f5f5f5;
