--- a/client/assets/sass/shared/_fonts.scss
+++ b/client/assets/sass/shared/_fonts.scss
@@ -5,10 +5,10 @@
     font-family: $font-face;
     font-style: normal;
     font-weight: normal;
-    src: url('../../../fonts/#{$font-face}.eot');
-    src: url('../../../fonts/#{$font-face}.eot?') format('eot'),
-         url('../../../fonts/#{$font-face}.woff') format('woff'),
-         url('../../../fonts/#{$font-face}.ttf')  format('truetype');
+    src: url('../../../assets/fonts/#{$font-face}.eot');
+    src: url('../../../assets/fonts/#{$font-face}.eot?') format('eot'),
+         url('../../../assets/fonts/#{$font-face}.woff') format('woff'),
+         url('../../../assets/fonts/#{$font-face}.ttf')  format('truetype');
   }
 }
 
@@ -25,3 +25,5 @@
   font-style:  $style;
   font-weight: $weight;
 }
+
+@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic,900italic);
