--- a/client/assets/sass/shared/_layout.scss
+++ b/client/assets/sass/shared/_layout.scss
@@ -1,13 +1,22 @@
 
-@media #{$small-up} {
+@media screen {
+  html {
+    font-size: 62.5%;
+  }
+
+  body {
+    font-size: 1rem;
+  }
+
+
   #navbar {
     background-color: $ic-darkgreen;
     position: relative;
-    height: 150px;
+    height: 50px;
   }
 
   .ic-logo {
-    background-image: url(../../../assets/images/iclogo-web.svg);
+    background-image: url('../../../assets/images/iclogo-web.svg');
     background-repeat: no-repeat;
     background-position: 0 0;
     background-size: 110px 95px;
@@ -18,30 +27,38 @@
     width: 110px;
     height: 95px;
   }
-}
 
-/*
-@media #{$medium-up} {
-  .layout.css.fooooo{
-    color: red;
+  .dark {
+    background-color: $ic-darkgreen-80;
+  }
+
+  .welcome {
+    background-image: url('../../../assets/images/bg-charts.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    text-align: center;
+    padding: 130px 0;
+
+    h1 {
+      font-family: "Lato", sans-serif;
+      color: white;
+      font-size: rem-calc(48);
+      font-weight: 700;
+      text-shadow: 0 2px 5px #20353a;
+    }
+
+    .lead {
+      font-size: 14px;
+      color: #eee;
+      margin: 20px 0;
+    }
+
+  }
+
+
+  .footer {
+    background-color: $ic-brightgray;
   }
 }
 
-@media #{$large-up} {
-  .layout.css.fooooo{
-    color: red;
-  }
-}
-
-@media #{$xlarge-up} {
-  .layout.css.fooooo{
-    color: red;
-  }
-}
-
-@media #{$xxlarge-up} {
-  .layout.css.fooooo{
-    color: red;
-  }
-}
-*/
