--- a/client/assets/sass/shared/_fonts.scss
+++ b/client/assets/sass/shared/_fonts.scss
@@ -27,3 +27,4 @@
 }
 
 @import url(http://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic,900italic);
+//@import url(http://fonts.googleapis.com/css?family=Neuton:200,300,400,700,800,400italic);
