finalizing nav bar layout & logo

--- a/client/app/account/login/login.jade
+++ b/client/app/account/login/login.jade
@@ -1,5 +1,4 @@
-section#navbar
-  div.row(ng-include='"components/navbar/navbar.html"')
+section#navbar(ng-include='"components/navbar/navbar.html"')
 
 section.content
   .row
