--- a/client/app/main/main.jade
+++ b/client/app/main/main.jade
@@ -1,5 +1,4 @@
-section#navbar
-  div.row(ng-include='"components/navbar/navbar.html"')
+section#navbar(ng-include='"components/navbar/navbar.html"')
 
 header.welcome
   .row
@@ -11,7 +10,6 @@ header.welcome
         p.lead IC Doo makes it easy for you to log, track, and monitor your project related
           br
           | work time without reloading the page. Getting started only takes a few minutes.
-
 
 section.content
   .row
