--- a/client/assets/sass/shared/_layout.scss
+++ b/client/assets/sass/shared/_layout.scss
@@ -16,20 +16,57 @@
   }
 
   .ic-logo {
-    background-image: url('../../../assets/images/iclogo-web.svg');
+    background-image: url('../../../assets/images/icdoo-logo.svg');
     background-repeat: no-repeat;
     background-position: 0 0;
-    background-size: 110px 95px;
+    background-size: 70px;
     position: absolute;
-    right: 0;
-    top: 28px;
+    left: 0;
+    top: 11px;
     display: block;
-    width: 110px;
-    height: 95px;
+    width: 70px;
+    height: 23px;
   }
 
   .dark {
     background-color: $ic-darkgreen-80;
+  }
+
+  .navbar {
+    margin: 0;
+
+    &.navbar-right,
+    &.navbar-left {
+      display: block;
+
+      li {
+        list-style-type: none;
+        float: left;
+        display: block;
+
+        a {
+          float: left;
+          display: inline-block;
+          padding: 14px 15px;
+          color: rgba(255,255,255,.6);
+          @include vendor-prefix('transition','all .2s ease-in');
+
+        &:hover {
+          color: rgba(255,255,255,1);
+            @include vendor-prefix('transition','all .2s ease-out');
+          }
+        }
+      }
+    }
+
+    &.navbar-left {
+      float: left;
+      margin-left: 120px;
+    }
+
+    &.navbar-right {
+      float: right;
+    }
   }
 
   .welcome {
@@ -41,11 +78,11 @@
     padding: 130px 0;
 
     h1 {
-      font-family: "Lato", sans-serif;
+      font-family: Lato, sans-serif;
       color: white;
       font-size: rem-calc(48);
       font-weight: 700;
-      text-shadow: 0 2px 5px #20353a;
+      text-shadow: 0 2px 5px rgba(0,0,0,.5);
     }
 
     .lead {
