--- a/client/components/navbar/navbar.jade
+++ b/client/components/navbar/navbar.jade
@@ -1,35 +1,43 @@
+.row
+  div.small-12.columns
+    div.navbar(ng-controller='NavbarCtrl')
+      div.navbar-header
+        a.ic-logo(href='/')
+        //button.navbar-toggle(type='button', ng-click='isCollapsed = !isCollapsed')
+          span.sr-only Toggle navigation
+          // span.icon-bar
+          // span.icon-bar
+          // span.icon-bar
+        //a.button(href='#', data-dropdown='drop1') Dropdown Button
+        //ul.f-dropdown(data-dropdown-content)
+          li
+            a(href='#') This is a link
+          li
+            a(href='#') This is another
+          li
+            a(href='#') Yet another
 
-div.small-12.columns
-  div.navbar(ng-controller='NavbarCtrl')
-    div.navbar-header
-      button.navbar-toggle(type='button', ng-click='isCollapsed = !isCollapsed')
-        span.sr-only Toggle navigation
-        // span.icon-bar
-        // span.icon-bar
-        // span.icon-bar
-      a.ic-logo(href='/')
+      div(ng-class='isCollapsed')
+        ul.navbar.navbar-left
+          li(ng-repeat='item in menu', ng-class='{active: isActive(item.link)}')
+            a(ng-href='{{item.link}}') {{item.title}}
 
-    div.collapse(collapse='isCollapsed')
-      ul.navbar.navbar-left
-        li(ng-repeat='item in menu', ng-class='{active: isActive(item.link)}')
-          a(ng-href='{{item.link}}') {{item.title}}
+          li(ng-show='isAdmin()', ng-class='{active: isActive("/admin")}')
+            a(href='/admin') Admin
 
-        li(ng-show='isAdmin()', ng-class='{active: isActive("/admin")}')
-          a(href='/admin') Admin
+        ul.navbar.navbar-right
+          li(ng-hide='isLoggedIn()', ng-class='{active: isActive("/signup")}')
+            a(href='/signup') Sign up
 
-      ul.navbar.navbar-right
-        li(ng-hide='isLoggedIn()', ng-class='{active: isActive("/signup")}')
-          a(href='/signup') Sign up
+          li(ng-hide='isLoggedIn()', ng-class='{active: isActive("/login")}')
+            a(href='/login') Login
 
-        li(ng-hide='isLoggedIn()', ng-class='{active: isActive("/login")}')
-          a(href='/login') Login
+          li(ng-show='isLoggedIn()')
+            p.navbar-text Hello {{ getCurrentUser().name }}
 
-        li(ng-show='isLoggedIn()')
-          p.navbar-text Hello {{ getCurrentUser().name }}
+          li(ng-show='isLoggedIn()', ng-class='{active: isActive("/settings")}')
+            a(href='/settings')
+              span.glyphicon.glyphicon-cog
 
-        li(ng-show='isLoggedIn()', ng-class='{active: isActive("/settings")}')
-          a(href='/settings')
-            span.glyphicon.glyphicon-cog
-
-        li(ng-show='isLoggedIn()', ng-class='{active: isActive("/logout")}')
-          a(href='', ng-click='logout()') Logout
+          li(ng-show='isLoggedIn()', ng-class='{active: isActive("/logout")}')
+            a(href='', ng-click='logout()') Logout
