--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -9,6 +9,7 @@
 @import "../assets/sass/shared/variables";
 @import "../assets/sass/shared/mixins";
 @import "../assets/sass/shared/fonts";
+@import "../assets/sass/shared/icons";
 
 
 // zurb foundation ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
