--- a/client/app/main/main.jade
+++ b/client/app/main/main.jade
@@ -4,12 +4,18 @@ header.welcome
   .row
     .small-12.columns
       .small-8.columns.small-offset-2
-        h1 Track your working time
+        h1 Keep your team up to date
           br
-          | and monitor all results.
-        p.lead IC Doo makes it easy for you to log, track, and monitor your project related
+          | and yourself in the loop.
+        p.lead IC Doo makes it easy for you to broadcast, and track
           br
-          | work time without reloading the page. Getting started only takes a few minutes.
+          | your status updates without reloading the page.
+          br
+          | Getting started only takes a few minutes.
+
+        p
+          br
+          a.button.large.radius(href='/signup') Create a free account
 
 section.content
   .row
