--- a/client/assets/sass/shared/_variables.scss
+++ b/client/assets/sass/shared/_variables.scss
@@ -6,4 +6,5 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 $ic-darkgreen:                                                          #15444c;
 $ic-darkgreen-80:                                                       #446971;
 $ic-brightgreen:                                                        #bbcc33;
+$ic-darkgray:                                                           #2d333c;
 $ic-brightgray:                                                         #f5f5f5;
