--- a/client/app/account/settings/settings.jade
+++ b/client/app/account/settings/settings.jade
@@ -1,9 +1,13 @@
 section#navbar(ng-include='"components/navbar/navbar.html"')
-.container
+
+header.headline
   .row
-    .col-sm-12
+    .small-12.columns
       h1 Change Password
-    .col-sm-12
+
+section.content
+  .row
+    .small-12.columns
       form.form(name='form', ng-submit='changePassword(form)', novalidate='')
         .form-group
           label Current Password
