--- a/client/app/main/main.jade
+++ b/client/app/main/main.jade
@@ -39,6 +39,6 @@ footer.footer
   .row
     div.small-12.columns
       p
-        a(href='https://twitter.com/tyhenkel') @tyhenkel
+        a(href='https://twitter.com/lidolee') @lidolee
         = ' | '
         a(href='https://github.com/DaftMonk/generator-angular-fullstack/issues?state=open') Issues
